--- a/api/introduction.mdx
+++ b/api/introduction.mdx
@@ -1,9 +1,7 @@
 ---
-title: 'Getting Started'
+title: 'Growthmarketing.ai API'
 description: 'Free tools for marketing and SEO data analysis'
 ---
-
-# growthmarketing.ai API
 
 Welcome to the growthmarketing.ai API documentation. This page will guide you on how to access and utilize our API endpoints.
 
