--- a/introduction.mdx
+++ b/introduction.mdx
@@ -3,7 +3,7 @@ title: 'Getting Started'
 description: 'Free tools for marketing and SEO data analysis'
 ---
 
-# growthmarketing.ai API
+# growthmarketing.ai API Docs
 
 Welcome to the growthmarketing.ai API documentation. This page will guide you on how to access and utilize our API endpoints.
 
